--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint": "eslint lib test",
     "test": "mocha \"test/scripts/**/*.js\"",
     "test-cov": "nyc --reporter=lcov --reporter=text-summary npm test",
-    "jsdoc": "jsdoc --configure .jsdoc.json"
+    "jsdoc": "jsdoc --configure .jsdoc.json",
+    "prepack": "tsc"
   },
   "repository": "hexojs/warehouse",
   "keywords": [
@@ -32,6 +33,13 @@
     "rfdc": "^1.1.4"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.32",
+    "@types/graceful-fs": "^4.1.3",
+    "@types/jsonstream": "^0.8.30",
+    "@types/node": "^14.6.4",
+    "@types/rfdc": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.0.0",
@@ -41,7 +49,8 @@
     "minami": "^1.1.1",
     "mocha": "^8.0.1",
     "nyc": "^15.0.0",
-    "sinon": "^9.0.2"
+    "sinon": "^9.0.2",
+    "typescript": "^4.0.2"
   },
   "engines": {
     "node": ">=10.13.0"
