--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,20 +10,29 @@
     "ecmaVersion": 2018
   },
   "plugins": [
+    "import",
     "@typescript-eslint"
   ],
   "settings": {
     "node": {
-      "tryExtensions": [".js", ".json", ".node", ".ts", ".d.ts"]
+      "extensions": [".js", ".json", ".node", ".ts", ".d.ts"]
+    },
+    "import/resolver": {
+      "typescript": {
+      }
     }
   },
   "extends": [
     "hexo",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
   "rules": {
     "node/no-unsupported-features/es-syntax": ["error", { "ignores": ["modules"] }],
+    "node/no-missing-import": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_+$" }],
     "@typescript-eslint/restrict-template-expressions": "off",
