--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.0.0",
     "eslint-config-hexo": "^4.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.0",
     "jsdoc": "^3.4.0",
     "lodash": "^4.17.15",
     "minami": "^1.1.1",
