--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,9 @@
     "node": {
       "extensions": [".js", ".json", ".node", ".ts", ".d.ts"]
     },
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts"]
+    },
     "import/resolver": {
       "typescript": {
       }
@@ -31,11 +34,18 @@
     "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
   "rules": {
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-useless-constructor": ["error"],
+    "no-extra-parens": "off",
+    "@typescript-eslint/no-extra-parens": ["error"],
     "node/no-unsupported-features/es-syntax": ["error", { "ignores": ["modules"] }],
     "node/no-missing-import": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_+$" }],
+    "@typescript-eslint/ban-ts-comment": ["error", { "ts-ignore": "allow-with-description" }],
     "@typescript-eslint/restrict-template-expressions": "off",
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-empty-interface": ["error", { "allowSingleExtends": true }],
+    "@typescript-eslint/no-empty-function": ["error", { "allow": ["methods"] }],
+    "@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }]
   }
 }
