--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsonstream": "^0.8.30",
     "@types/node": "^14.6.4",
     "@types/rfdc": "^1.1.0",
+    "@types/sinon": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "chai": "^4.2.0",
