--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/no-unused-vars": ["error", { "args": "after-used", "argsIgnorePattern": "^_", "varsIgnorePattern": "^_+$" }],
     "@typescript-eslint/ban-ts-comment": ["error", { "ts-ignore": "allow-with-description" }],
     "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/unbound-method": ["error", { "ignoreStatic": true }],
     "@typescript-eslint/no-empty-interface": ["error", { "allowSingleExtends": true }],
     "@typescript-eslint/no-empty-function": ["error", { "allow": ["methods"] }],
     "@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }]
