--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2018",
     "module": "commonjs",
+
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
+
     "strict": true,
     "alwaysStrict": true,
     "strictNullChecks": true,
@@ -16,8 +17,10 @@
     "allowUnreachableCode": false,
     "skipLibCheck": true,
     "noImplicitThis": false,
+
     "removeComments": true,
     "declaration": true,
+    "rootDir": "./src",
     "outDir": "./lib",
     "baseUrl": ".",
     "paths": {
